# DynamicLearningRateLODE

./: .gitignore  README.md  lode_scheduler.py  pyproject.toml  train_cifar100.py
.github/workflows/: ci.yml
experiments/: lode_cifar100.py  train_cifar100.py
models/: ResNetFaMNIST.py  lode.py
src/dynamic_lode/core/: __init__.py  lode.py  lode_scheduler.py
src/dynamic_lode/models/: CNN.py  ResNet18.py  ResNet34.py  ResNetFaMNIST.py  __init__.py
src/dynamic_lode/utils/: __init__.py  hessian.py  schedule.py  utils.py
tests/: test_architectures.py  test_lode_schedule.py  test_lode_shapes.py  test_lode_train.py  test_scheduler_failure_mode.py  test_schedules.py  test_utils.py
