[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dynamic_lode"
version = "0.1.0"
description = "Dynamic learning rate scheduling with Latent Neural ODEs"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
authors = [
    { name = "Matt L. Sampson", email = "matt.sampson@princeton.edu" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
# Unified dependencies matched with your path-minimizer repository
dependencies = [
    "jax>=0.4.13",
    "jaxlib>=0.4.13",
    "flax>=0.7.0",
    "numpy>=1.21",
    "diffrax>=0.4.1",
    "equinox>=0.10.1",
    "optax>=0.1.5",
    "tensorflow-datasets",
    "matplotlib",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 88
target-version = "py39"
select = ["E", "F", "I"]

[tool.black]
line-length = 88
target-version = ['py39']
